# algorithms

./: all_methods.txt  pyproject.toml
first_method/: description.txt  main.py
second_method/: description.txt  main.py
