[tool.poetry]
name = "[kt] - algorithms"
version = "1.0.0"
description = ""
authors = ["kru_tin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = {extras = ["default"], version = "^3.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
